--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,14 @@ body {
   height: 100%;
 }
 
-select {
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
   -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield; /* Firefox */
 }
 
 .dropdown-content {
